resolved text align

--- a/frontend/src/app/stats-page/stats-page.component.css
+++ b/frontend/src/app/stats-page/stats-page.component.css
@@ -12,7 +12,7 @@ body {
     justify-content: space-around;
 }
 
-h1 p {
+h1, p {
     text-align: center;
 }
 
